remove categoryService from product controller test class